    in <Enterprise>:<Format> notation.
  ! fix, signals.c: ignoring SIGINT and SIGTERM in my_sigint_handler()
    to prevent multiple calls to fill_pipe_buffer(), condition that can
    cause pipe buffer overruns. Patch is courtesy by Osama Abu Elsorour.
  ! fix, pmacctd: tunnel registry now correctly supports multiple tunnel
    definitions for the same stack level. 
  ! fix, util.c: a feof() check has been added to the fread() call in
    read_SQLquery_from_file(); thanks to Elisa Jasinska and Brent Van
    Dussen for their support.
  ! fix, nfprobe: NetFlow output socket is now re-opened after failing
    send() calls. Thanks to Maurizio Molina for reporting the problem.
  ! fix, sfacctd: length checks have been imporved while extracting
    string tokens (ie. AS-PATH and BGP communities) from sFlow Extended
    Gateway object. Thanks to Duncan Small for his support.

0.14.0rc3 -- 07-12-2011
  + BGP daemon: BGP/MPLS VPNs (rfc4364) implemented! This encompasses both
    RIB storage (ie. virtualization layer) and lookup. bgp_iface_to_rd_map
    map correlates <router IP, input/output interfaces (ifIndex)> couples
    to Route Distinguishers (RDs). RD encapsulation types #0 (2-bytes ASN),
    #1 (IP address) and #2 (4-bytes ASN) are supported. Examples provided:
    examples/bgp_iface_to_rd.map and EXAMPLES files.
  + mpls_vpn_rd aggregation primitive has been added to the set. Also this
    is being supported key in Pre-Tagging (pre_tag_map). 
  + print plugin: introduced print_output_file feature to write statistics
    to files. Output is text, formatted or CSV. Filenames can contain time-
    based variables to make them dynamic. If filename is static instead,
    content is overwritten over time.
  + print plugin: introduced print_time_roundoff feature to align time slots
    nicely, same as per the sql_history_roundoff directive.
  + print plugin: introduced print_trigger_exec feature to execute custom